protecting url with jwt token
