# docs/swagger.yaml
@@ -1,6 +1,10 @@
 definitions:
   dto.CreateUserDto:
     properties:
+      cep:
+        maxLength: 8
+        minLength: 8
+        type: string
       email:
         type: string
       name:
@@ -12,6 +16,7 @@ definitions:
         minLength: 8
         type: string
     required:
+    - cep
     - email
     - name
     - password
@@ -136,40 +141,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Delete user
-      tags:
-      - user
-    get:
-      consumes:
-      - application/json
-      description: Get user by id
-      parameters:
-      - description: user id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.UserResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httperr.RestErr'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/httperr.RestErr'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httperr.RestErr'
-      security:
-      - ApiKeyAuth: []
-      summary: User details
       tags:
       - user
   /user/password/{id}:
